--- a/task1.html
+++ b/task1.html
@@ -39,7 +39,7 @@
 Готовому маннику даём остыть в форме.</ul>
         <ul>После того как манник остыл, извлекаем его из формы и посыпаем сахарной пудрой.
 Манник готов! Всем приятного чаепития!</ul>
-<ul><img src="манник2.jpg" alt="">Картинка пирога</ul>
+<ul><img src="манник2.jpg" alt="Картинка пирога"></ul>
     <hr>
    <ul><i><b>Если вы хотите поделиться своим уникальным рецептом, пишите мне в мой телеграм.
     Самые интересные будут опубликованы.</b></i></ul>
