--- a/task1.html
+++ b/task1.html
@@ -44,7 +44,7 @@
    <ul><i><b>Если вы хотите поделиться своим уникальным рецептом, пишите мне в мой телеграм.
     Самые интересные будут опубликованы.</b></i></ul>
     <ul> <a href="https://t.me/Alealealesya">
-<img width="55" src="телеграм.png" alt="Ссылка на телеграмм"></ul>
+<img width="55" src="телеграмма.png" alt="Ссылка на телеграмм"></ul>
     </a>
     <hr>
     <a href="index.html">Вернуться к книге рецептов</a>
