--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="ru">
 <head>
     
-    <h1><mark>КНИГА РЕЦЕПТОВ</mark></h1>
+    <h1><mark>ГЛАВНАЯ СТРАНИЦА</mark></h1>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Книга рецептов</title>
 </head>
 <body>
-    <h4>Предлагаю попробовать приготовить вкуснейший пирог на скорую руку. Рецепт смотрите по ссылке ниже.</h4>
-    <a href="task1.html">Манник</a>
+    <h4>Начинаю обучение по образовательной программе «Web-программист: с нуля до первых проектов»...</h4>
+    <a href="task1.html">Практическое задание 1</a>
+    <p>
+    <a href="task2.html">Практическое задание 2</a></p>
+
 
     
 </body>
