--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <a href="task1.html">Практическое задание 1</a>
     <p>
     <a href="task2.html">Практическое задание 2</a></p>
+    <p>
+        <a href="task3.html">Практическое задание 3</a>
+    </p>
 
 
     
