--- a/task1.html
+++ b/task1.html
@@ -39,15 +39,15 @@
 Готовому маннику даём остыть в форме.</ul>
         <ul>После того как манник остыл, извлекаем его из формы и посыпаем сахарной пудрой.
 Манник готов! Всем приятного чаепития!</ul>
-<ul><img src="манник2.jpg" alt="Картинка пирога"></ul>
+<ul><img src="Images/манник2.jpg" alt="Картинка пирога"></ul>
     <hr>
    <ul><i><b>Если вы хотите поделиться своим уникальным рецептом, пишите мне в мой телеграм.
     Самые интересные будут опубликованы.</b></i></ul>
     <ul> <a href="https://t.me/Alealealesya">
-<img width="55" src="телеграм.png" alt="Ссылка на телеграмм"></ul>
+<img width="55" src="Images/телеграм.png" alt="Ссылка на телеграмм"></ul>
     </a>
     <hr>
-    <a href="index.html">Вернуться к книге рецептов</a>
+    <a href="index.html">Вернуться на главную</a>
 
 
     
