--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <h1><mark>ГЛАВНАЯ СТРАНИЦА</mark></h1>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Книга рецептов</title>
+    <title>Учеба</title>
 </head>
 <body>
     <h4>Начинаю обучение по образовательной программе «Web-программист: с нуля до первых проектов»...</h4>
