--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <h4>Начинаю обучение по образовательной программе «Web-программист: с нуля до первых проектов»...</h4>
     <a href="task1.html">Практическое задание 1</a>
     <p>
-    <a href="task2.html">Практическое задание 2</a></p>
+    <a href="task2.html">Практическое задание 2</a>
+    </p>
     <p>
         <a href="task3.html">Практическое задание 3</a>
+    </p>
+    <p>
+        <a href="task4.html">Практическое задание 4</a>
     </p>
 
 
