--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <p>
         <a href="task4.html">Практическое задание 4</a>
     </p>
+    <p>
+        <a href="task5.html">Практическое задание 5</a>
+    </p>
 
 
     
