--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <p>
         <a href="task5.html">Практическое задание 5</a>
     </p>
+    <p>
+        <a href="task6.html">Практическое задание 6</a>
+    </p>
 
 
     
