--- a/task5.html
+++ b/task5.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="task5.css">
 </head>
 <body>
-    <section class="gallery">
-        <img id="big-image" src="Images/task5/image-1.jpg" alt="">
-        <div class="images">
-            <img id="img-1" src="Images/task5/image-1.jpg" alt="">
-            <img id="img-2" src="Images/task5/image-2.jpg" alt="">
-            <img id="img-3" src="Images/task5/image-3.jpg" alt="">
-            <img id="img-4" src="Images/task5/image-4.jpg" alt="">
-            <img id="img-5" src="Images/task5/image-5.jpg" alt="">
-        </div>
-    </section>
+    <button id="burger-menu-btn">Меню</button>
 
+    <nav id="burger-menu" style="left: -400px;">
+        <a href="#">Главная</a>
+        <a href="#">Контакты</a>
+        <a href="#">О нас</a>
+        <a href="#">Товары</a>
+        <button id="burger-menu-close">Закрыть</button>
+    </nav>
 
     <script src="task5.js"></script>
     
