--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <p>
         <a href="task6.html">Практическое задание 6</a>
     </p>
+    <p>
+        <a href="final.html">Итоговая работа</a>
+    </p>
 
 
     
